--- a/styles/contact-us.module.scss
+++ b/styles/contact-us.module.scss
@@ -167,3 +167,148 @@
         }
     }
 }
+
+@media screen and (max-width: $mobile) {
+    .contact_us {
+
+        .content {
+            display: flex;
+            padding: 10vw 10vw 0vw 10vw;
+            justify-content: space-between;
+
+            .left {
+                width: 50%;
+
+                form {
+                    display: flex;
+                    flex-direction: column;
+
+                    input {
+                        margin: 2vw 0vw;
+                        outline: none;
+                        border: none;
+                        border-bottom: .1vw solid #000;
+                        width: 100%;
+                        height: 6vw;
+
+                        &::placeholder {
+                            color: rgb(0, 0, 0);
+                            margin: 10vw 0vw;
+                            padding: 10vw 0vw;
+                            font-family: "Visby Regular";
+                            font-size: 2vw;
+                            transition: all .3s ease-in-out;
+
+                        }
+
+                        &:focus {
+                            &::placeholder {
+                                color: rgb(122, 122, 122);
+                                margin: 1vw 0vw;
+                                padding: 1vw 0vw;
+                                font-family: "Visby Regular";
+                                font-size: 2vw;
+                                transition: all .3s ease-in-out;
+                            }
+                        }
+
+                    }
+
+                    textarea {
+                        margin: 2vw 0vw;
+                        outline: none;
+                        border: none;
+                        border-bottom: 1px solid #000;
+                        width: 100%;
+                        height: 5vw;
+
+
+                        &::placeholder {
+                            color: rgb(0, 0, 0);
+                            margin: 1vw 0vw;
+                            padding: 1vw 0vw;
+                            font-family: "Visby Regular";
+                            font-size: 2vw;
+                            transition: all .3s ease-in-out;
+
+                        }
+
+                        &:focus {
+                            &::placeholder {
+                                color: rgb(122, 122, 122);
+                                margin: 1vw 0vw;
+                                padding: 1vw 0vw;
+                                font-family: "Visby Regular";
+                                font-size: 2vw;
+                                transition: all .3s ease-in-out;
+
+                            }
+                        }
+
+                      
+
+
+                    }
+
+                    button {
+                        margin: 2vw 0vw;
+                        outline: none;
+                        border: none;
+                        background-color: $primary;
+                        color: $light;
+                        font-family: "Visby Semibold";
+                        font-size: 2vw;
+                        padding: 1vw 2vw;
+                        border-radius: 1vw;
+                        letter-spacing: 0.1vw;
+                        cursor: pointer;
+                        transition: all .3s ease-in-out;
+
+
+                     
+                    }
+                }
+            }
+
+            .right {
+                width: 50%;
+                padding: 0vw 8vw;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+
+                h1 {
+                    font-family: "Visby Bold";
+                    font-size: 5vw;
+                    margin: 2vw 0vw;
+                    letter-spacing: 1.5vw;
+                    margin-bottom: 0;
+                }
+
+                h2 {
+                    font-family: "Visby Bold";
+                    font-size: 5vw;
+                    display: flex;
+                    align-items: center;
+
+                    color: $primary;
+                    margin: 0vw 0vw;
+
+                    hr {
+                        width: 21.5vw;
+                        height: 0.1vw;
+                        background-color: rgba(0, 0, 0, 0.400);
+                        border: none;
+                        margin-right: 1vw;
+                    }
+                }
+
+                p {
+                    font-family: "Visby Regular";
+                    font-size: 2vw;
+                    margin: 2vw 0vw;
+                }
+            }
+        }
+    }
+}
