--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -483,17 +483,19 @@
 
     .content {
         display: flex;
+        flex-direction: column;
         gap: 5vw;
-
+        justify-content: center;
+        align-items: center;
 
         .left {
             width: 100%;
+            text-align: center;
 
             h2 {
                 font-size: 2vw;
                 font-family: 'Visby Regular';
                 margin-bottom: 3vw;
-                width: 100%;
                 line-height: 3vw;
             }
 
@@ -537,7 +539,10 @@
                 flex-direction: column;
                 padding: 0 3vw;
                 justify-content: center;
-                height: 18vw;
+                align-items: center;
+                height: 25vw;
+                margin-left: 10vw;
+                margin-right: 10vw;
                 margin-bottom: 3vw;
             }
         }
@@ -554,25 +559,19 @@
     padding: 0 10vw;
 
     .content {
-        padding: 5vw 0vw;
+        height: 15vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         .carousel {
             display: flex;
             justify-content: space-around;
             align-items: center;
 
-
-            // &:nth-child(3n) {
-            //     img {
-            //         width: 50vw;
-            //         height: max-content;
-            //     }
-            // }
-
             img {
                 width: 10vw;
                 height: max-content;
-
             }
         }
     }
@@ -1207,24 +1206,19 @@
 
         .content {
             display: flex;
+            flex-direction: column;
             gap: 5vw;
-
-            hr {
-                width: .1vw;
-                height: 30vw;
-                background-color: rgba(255, 255, 255, 0.400);
-                border: none;
-                align-self: center
-            }
+            justify-content: center;
+            align-items: center;
 
             .left {
-                width: 50%;
+                width: 100%;
+                text-align: center;
 
                 h2 {
                     font-size: 2vw;
                     font-family: 'Visby Regular';
                     margin-bottom: 3vw;
-                    width: 30vw;
                     line-height: 3vw;
                 }
 
@@ -1233,7 +1227,8 @@
                     height: 0.1vw;
                     background-color: rgba(255, 255, 255, 0.400);
                     border: none;
-                    align-self: center
+                    align-self: center;
+                    margin-bottom: 3vw;
                 }
 
                 p {
@@ -1263,45 +1258,18 @@
                 }
 
                 .carousel {
-                    padding: 0 5vw;
-                    justify-content: space-around;
-                    align-items: center;
-                }
-            }
-
-            .right {
-                width: 50%;
-                display: flex;
-                align-items: center;
-                text-align: center;
-
-                h1 {
-                    font-size: 3vw;
-                    font-family: 'Visby Medium';
-                    letter-spacing: .2vw;
-
-                    margin: 0;
-
-                }
-
-                h2 {
-                    font-size: 3vw;
-                    font-family: 'Visby Medium';
-                    margin: 0;
-                }
-
-                .counter {
                     display: flex;
-
-                    h1 {
-                        min-width: 11vw;
-                        max-width: 11vw;
-                    }
+                    flex-direction: column;
+                    padding: 0 3vw;
+                    justify-content: center;
+                    align-items: center;
+                    height: 25vw;
+                    margin-left: 10vw;
+                    margin-right: 10vw;
+                    margin-bottom: 3vw;
                 }
-
-
-
             }
+
 
 
 
@@ -1314,25 +1282,20 @@
         padding: 0 10vw;
 
         .content {
-            padding-top: 5vw;
+            height: 20vw;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
             .carousel {
+                margin: 0 10vw;
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
 
-
-                // &:nth-child(3n) {
-                //     img {
-                //         width: 50vw;
-                //         height: max-content;
-                //     }
-                // }
-
                 img {
                     width: 10vw;
                     height: max-content;
-
                 }
             }
         }
