--- a/styles/components/contact.module.scss
+++ b/styles/components/contact.module.scss
@@ -41,7 +41,7 @@
                 font-size: 1.5vw;
                 font-family: 'Visby Regular';
                 font-weight: 400;
-                color: #A9A9A9;
+                color: black;
                 padding: .5vw 1vw;
                 outline: solid .15vw $primary;
                 transition: all .3s ease-in-out;
@@ -51,10 +51,44 @@
                     outline: none;
                     transition: all .3s ease-in-out;
                 }
+
+                &::placeholder {
+                    color: #A9A9A9;
+                }
+
+
+
+            }
+
+            textarea {
+                min-width: 40vw;
+                max-width: 40vw;
+                min-height: 5vw;
+                border: none;
+                border-radius: .5vw;
+                background-color: $light;
+                margin-bottom: 1vw;
+                font-size: 1.5vw;
+                font-family: 'Visby Regular';
+                font-weight: 400;
+                color: black;
+                padding: .5vw 1vw;
+                outline: solid .15vw $primary;
+                transition: all .3s ease-in-out;
+
+
+                &:focus {
+                    outline: none;
+                    transition: all .3s ease-in-out;
+                }
+
+                &::placeholder {
+                    color: #A9A9A9;
+                }
             }
 
             button {
-                width: 40vw;
+                width: 100%;
                 height: 4vw;
                 border: none;
                 border-radius: .5vw;
@@ -79,6 +113,7 @@
         }
 
         img {
+            align-self: center;
             width: max-content;
             height: 20vw;
             margin-left: 5vw;
@@ -110,6 +145,15 @@
                     margin-bottom: 1.5vw;
 
 
+                }
+
+                textarea {
+                    min-width: 40vw;
+                    max-width: 40vw;
+                    min-height: 10vw;
+                    font-size: 3vw;
+                    padding: 1vw 2vw;
+                    margin-bottom: 1.5vw;
                 }
 
                 button {
