--- a/styles/contact-us.module.scss
+++ b/styles/contact-us.module.scss
@@ -35,7 +35,7 @@
                     width: 100%;
                     height: 2vw;
                     background-color: transparent;
-
+                    font-size: 1.5vw;
                     &::placeholder {
                         color: rgb(0, 0, 0);
                         margin: 1vw 0vw;
@@ -78,7 +78,7 @@
                     width: 100%;
                     height: 5vw;
                     background-color: transparent;
-
+                    font-size: 1.5vw;
 
                     &::placeholder {
                         color: rgb(0, 0, 0);
